# Example for use of GNU gettext.
# Copyright (C) 2003 Free Software Foundation, Inc.
# This file is in the public domain.
#
# Makefile configuration - processed by automake.
#

#MAINTAINERCLEANFILES = Makefile.in
MAINTAINERCLEANFILES =

POTFILES = \
        src/object/physical_obj.cpp \
        src/object/object_cfg.cpp \
        src/object/medkit.cpp \
        src/object/barrel.cpp \
        src/object/objects_list.cpp \
        src/object/bonus_box.cpp \
        src/object/physics.cpp \
        src/object/objbox.cpp \
        src/include/action.cpp \
        src/include/action_handler.cpp \
        src/include/constant.cpp \
        src/team/results.cpp \
        src/team/team_energy.cpp \
        src/team/team.cpp \
        src/team/teams_list.cpp \
        src/character/move.cpp \
        src/character/member.cpp \
        src/character/body_list.cpp \
        src/character/movement.cpp \
        src/character/clothe.cpp \
        src/character/character.cpp \
        src/character/body.cpp \
        src/main.cpp \
        src/interface/mouse.cpp \
        src/interface/loading_screen.cpp \
        src/interface/cursor.cpp \
        src/interface/weapon_menu.cpp \
        src/interface/keyboard.cpp \
        src/interface/game_msg.cpp \
        src/interface/interface.cpp \
        src/particles/body_member.cpp \
        src/particles/bullet.cpp \
        src/particles/magic_star.cpp \
        src/particles/smoke.cpp \
        src/particles/fire.cpp \
        src/particles/ill_bubble.cpp \
        src/particles/explosion_smoke.cpp \
        src/particles/ground_particles.cpp \
        src/particles/star.cpp \
        src/particles/dark_smoke.cpp \
        src/particles/particle.cpp \
        src/particles/polecat_fart.cpp \
        src/particles/teleport_member.cpp \
        src/map/camera.cpp \
        src/map/sky.cpp \
        src/map/map.cpp \
        src/map/maps_list.cpp \
        src/map/tile.cpp \
        src/map/tileitem.cpp \
        src/map/wind.cpp \
        src/map/ground.cpp \
        src/map/water.cpp \
        src/graphic/sprite.cpp \
        src/graphic/text.cpp \
        src/graphic/fps.cpp \
        src/graphic/font.cpp \
        src/graphic/effects.cpp \
        src/graphic/polygon.cpp \
        src/graphic/text_list.cpp \
        src/graphic/color.cpp \
        src/graphic/spriteanimation.cpp \
        src/graphic/spritecache.cpp \
        src/graphic/spriteframe.cpp \
        src/graphic/surface.cpp \
        src/graphic/video.cpp \
        src/menu/menu.cpp \
        src/menu/credits_menu.cpp \
        src/menu/main_menu.cpp \
        src/menu/game_menu.cpp \
        src/menu/network_connection_menu.cpp \
        src/menu/map_selection_box.cpp \
        src/menu/internet_menu.cpp \
        src/menu/results_menu.cpp \
        src/menu/network_teams_selection_box.cpp \
        src/menu/teams_selection_box.cpp \
        src/menu/options_menu.cpp \
        src/menu/network_menu.cpp \
        src/menu/team_box.cpp \
        src/sound/jukebox.cpp \
        src/ai/ai_shoot_module.cpp \
        src/ai/ai_engine.cpp \
        src/ai/ai_engine_stupid.cpp \
        src/ai/ai_movement_module.cpp \
        src/tool/file_tools.cpp \
        src/tool/euler_vector.cpp \
        src/tool/error.cpp \
        src/tool/string_tools.cpp \
        src/tool/xml_document.cpp \
        src/tool/affine_transform.cpp \
        src/tool/resource_manager.cpp \
        src/tool/stats.cpp \
        src/tool/random.cpp \
        src/tool/debug.cpp \
        src/tool/i18n.cpp \
        src/tool/math_tools.cpp \
        src/network/download.cpp \
        src/network/net_error_msg.cpp \
        src/network/chat.cpp \
        src/network/index_server.cpp \
        src/network/distant_cpu.cpp \
        src/network/randomsync.cpp \
        src/network/network.cpp \
        src/game/game.cpp \
        src/game/config.cpp \
        src/game/game_loop.cpp \
        src/game/time.cpp \
        src/game/game_mode.cpp \
        src/weapon/teleportation.cpp \
        src/weapon/auto_bazooka.cpp \
        src/weapon/air_attack.cpp \
        src/weapon/weapon_cfg.cpp \
        src/weapon/blowtorch.cpp \
        src/weapon/bounce_ball.cpp \
        src/weapon/weapons_list.cpp \
        src/weapon/parachute.cpp \
        src/weapon/anvil.cpp \
        src/weapon/shotgun.cpp \
        src/weapon/mine.cpp \
        src/weapon/launcher.cpp \
        src/weapon/riot_bomb.cpp \
        src/weapon/syringe.cpp \
        src/weapon/gnu.cpp \
        src/weapon/polecat.cpp \
        src/weapon/supertux.cpp \
        src/weapon/crosshair.cpp \
        src/weapon/grenade.cpp \
        src/weapon/jetpack.cpp \
        src/weapon/bazooka.cpp \
        src/weapon/ninja_rope.cpp \
        src/weapon/suicide.cpp \
        src/weapon/lowgrav.cpp \
        src/weapon/disco_grenade.cpp \
        src/weapon/explosion.cpp \
        src/weapon/dynamite.cpp \
        src/weapon/skip_turn.cpp \
        src/weapon/airhammer.cpp \
        src/weapon/weapon.cpp \
        src/weapon/gun.cpp \
        src/weapon/baseball.cpp \
        src/weapon/snipe_rifle.cpp \
        src/weapon/construct.cpp \
        src/weapon/cluster_bomb.cpp \
        src/weapon/submachine_gun.cpp \
        src/gui/spin_button.cpp \
        src/gui/list_box_w_label.cpp \
        src/gui/label.cpp \
        src/gui/button_text.cpp \
        src/gui/check_box.cpp \
        src/gui/text_box.cpp \
        src/gui/msg_box.cpp \
        src/gui/spin_button_big.cpp \
        src/gui/box.cpp \
        src/gui/button.cpp \
        src/gui/question.cpp \
        src/gui/picture_widget.cpp \
        src/gui/progress_bar.cpp \
        src/gui/EnergyBar.cpp \
        src/gui/spin_button_picture.cpp \
        src/gui/null_widget.cpp \
        src/gui/widget.cpp \
        src/gui/widget_list.cpp \
        src/gui/list_box.cpp \
        src/gui/picture_text_cbox.cpp \
        tools/index_server/net_data.cpp \
        tools/index_server/client.cpp \
        tools/index_server/config.cpp \
        tools/index_server/server.cpp \
        tools/index_server/download.cpp \
        tools/index_server/main.cpp \
        tools/index_server/stat.cpp \
        tools/index_server/sync_slave.cpp \
        tools/index_server/clock.cpp \
        src/config.h \
        src/object/barrel.h \
        src/object/objbox.h \
        src/object/physics.h \
        src/object/medkit.h \
        src/object/object_cfg.h \
        src/object/bonus_box.h \
        src/object/objects_list.h \
        src/object/physical_obj.h \
        src/include/constant.h \
        src/include/binreloc.h \
        src/include/action_handler.h \
        src/include/action.h \
        src/include/app.h \
        src/include/base.h \
        src/team/results.h \
        src/team/team.h \
        src/team/macro.h \
        src/team/team_config.h \
        src/team/teams_list.h \
        src/team/team_energy.h \
        src/character/body.h \
        src/character/movement.h \
        src/character/body_list.h \
        src/character/member.h \
        src/character/move.h \
        src/character/clothe.h \
        src/character/character.h \
        src/interface/mouse.h \
        src/interface/cursor.h \
        src/interface/keyboard.h \
        src/interface/game_msg.h \
        src/interface/weapon_menu.h \
        src/interface/interface.h \
        src/interface/loading_screen.h \
        src/particles/dark_smoke.h \
        src/particles/particle.h \
        src/particles/star.h \
        src/particles/fire.h \
        src/particles/ground_particles.h \
        src/particles/body_member.h \
        src/particles/smoke.h \
        src/particles/bullet.h \
        src/particles/teleport_member.h \
        src/particles/ill_bubble.h \
        src/particles/polecat_fart.h \
        src/particles/magic_star.h \
        src/particles/explosion_smoke.h \
        src/map/tile.h \
        src/map/camera.h \
        src/map/tileitem.h \
        src/map/maps_list.h \
        src/map/sky.h \
        src/map/map.h \
        src/map/wind.h \
        src/map/ground.h \
        src/map/water.h \
        src/graphic/effects.h \
        src/graphic/surface.h \
        src/graphic/color.h \
        src/graphic/spriteanimation.h \
        src/graphic/fps.h \
        src/graphic/text_list.h \
        src/graphic/video.h \
        src/graphic/spriteframe.h \
        src/graphic/colors.h \
        src/graphic/polygon.h \
        src/graphic/text.h \
        src/graphic/font.h \
        src/graphic/spritecache.h \
        src/graphic/textured_polygon.h \
        src/graphic/sprite.h \
        src/menu/options_menu.h \
        src/menu/network_connection_menu.h \
        src/menu/menu.h \
        src/menu/network_teams_selection_box.h \
        src/menu/main_menu.h \
        src/menu/team_box.h \
        src/menu/credits_menu.h \
        src/menu/internet_menu.h \
        src/menu/teams_selection_box.h \
        src/menu/results_menu.h \
        src/menu/network_menu.h \
        src/menu/game_menu.h \
        src/menu/map_selection_box.h \
        src/sound/jukebox.h \
        src/ai/ai_engine.h \
        src/ai/ai_engine_stupid.h \
        src/ai/ai_shoot_module.h \
        src/ai/ai_movement_module.h \
        src/tool/resource_manager.h \
        src/tool/i18n.h \
        src/tool/debug.h \
        src/tool/string_tools.h \
        src/tool/stats.h \
        src/tool/random.h \
        src/tool/xml_document.h \
        src/tool/math_tools.h \
        src/tool/error.h \
        src/tool/file_tools.h \
        src/tool/vector2.h \
        src/tool/point.h \
        src/tool/rectangle.h \
        src/tool/affine_transform.h \
        src/tool/euler_vector.h \
        src/network/download.h \
        src/network/chat.h \
        src/network/distant_cpu.h \
        src/network/index_server.h \
        src/network/net_error_msg.h \
        src/network/index_svr_msg.h \
        src/network/randomsync.h \
        src/network/network.h \
        src/game/config.h \
        src/game/game_mode.h \
        src/game/game_loop.h \
        src/game/game.h \
        src/game/time.h \
        src/weapon/cluster_bomb.h \
        src/weapon/anvil.h \
        src/weapon/weapons_list.h \
        src/weapon/weapon_cfg.h \
        src/weapon/polecat.h \
        src/weapon/bazooka.h \
        src/weapon/mine.h \
        src/weapon/baseball.h \
        src/weapon/disco_grenade.h \
        src/weapon/gun.h \
        src/weapon/construct.h \
        src/weapon/weapon.h \
        src/weapon/air_attack.h \
        src/weapon/dynamite.h \
        src/weapon/suicide.h \
        src/weapon/supertux.h \
        src/weapon/parachute.h \
        src/weapon/submachine_gun.h \
        src/weapon/ninja_rope.h \
        src/weapon/jetpack.h \
        src/weapon/teleportation.h \
        src/weapon/crosshair.h \
        src/weapon/snipe_rifle.h \
        src/weapon/lowgrav.h \
        src/weapon/skip_turn.h \
        src/weapon/gnu.h \
        src/weapon/launcher.h \
        src/weapon/shotgun.h \
        src/weapon/bounce_ball.h \
        src/weapon/riot_bomb.h \
        src/weapon/all.h \
        src/weapon/airhammer.h \
        src/weapon/syringe.h \
        src/weapon/blowtorch.h \
        src/weapon/explosion.h \
        src/weapon/auto_bazooka.h \
        src/weapon/grenade.h \
        src/gui/container.h \
        src/gui/spin_button.h \
        src/gui/label.h \
        src/gui/picture_text_cbox.h \
        src/gui/button.h \
        src/gui/EnergyBar.h \
        src/gui/progress_bar.h \
        src/gui/list_box_w_label.h \
        src/gui/list_box.h \
        src/gui/text_box.h \
        src/gui/null_widget.h \
        src/gui/picture_widget.h \
        src/gui/widget.h \
        src/gui/box.h \
        src/gui/spin_button_picture.h \
        src/gui/spin_button_big.h \
        src/gui/msg_box.h \
        src/gui/check_box.h \
        src/gui/question.h \
        src/gui/button_text.h \
        src/gui/widget_list.h \
        tools/index_server/config.h \
        tools/index_server/download.h \
        tools/index_server/clock.h \
        tools/index_server/client.h \
        tools/index_server/net_data.h \
        tools/index_server/debug.h \
        tools/index_server/sync_slave.h \
        tools/index_server/stat.h \
        tools/index_server/server.h

DOMAIN = $(PACKAGE)

COPYRIGHT_HOLDER = Wormux Development Team

MSGID_BUGS_ADDRESS = wormux-dev@gna.org

localedir=@LOCALEDIR@

XGETTEXT = @XGETTEXT@ 
# add as automated comments all strings preceeding the gettexized line
# since it seems that in most cases the comments are useful
XGETTEXT_OPTIONS = -c --keyword=_ --keyword=N_ -k='XCOMMENT'
MSGMERGE = @MSGMERGE@
MSGMERGE_UPDATE = @MSGMERGE@ --quiet --update
MSGINIT = @MSGINIT@
MSGCONV = @MSGCONV@
MSGFILTER = @MSGFILTER@

# This is computed as $(foreach file, $(POTFILES), $(top_srcdir)/$(file))
POTFILES_DEPS = @POTFILES_DEPS@

# This is computed as $(foreach lang, $(LINGUAS), $(srcdir)/$(lang).po)
POFILES = @POFILES@
# This is computed as $(foreach lang, $(LINGUAS), $(srcdir)/$(lang).gmo)
GMOFILES = @GMOFILES@
# This is computed as $(foreach lang, $(LINGUAS), $(lang).po-update)
UPDATEPOFILES = @UPDATEPOFILES@
# This is computed as $(foreach lang, $(LINGUAS), $(lang).nop)
DUMMYPOFILES = @DUMMYPOFILES@

# This is computed as
# $(foreach lang, user-specified subset of $(LINGUAS), $(lang).gmo)
CATALOGS = @CATALOGS@

SUFFIXES = .po .gmo .mo .sed .sin .nop .po-update

.po.gmo:
	@lang=`echo $* | sed -e 's,.*/,,'`; \
	test "$(srcdir)" = . && cdcmd="" || cdcmd="cd $(srcdir) && "; \
	echo "Create $${lang}.gmo"; \
	cd $(srcdir) && rm -f $${lang}.gmo && $(GMSGFMT) -c -o t-$${lang}.gmo $${lang}.po && mv t-$${lang}.gmo $${lang}.gmo

.sin.sed:
	@echo "Create $@ file"
	@sed -e '/^#/d' $< > t-$@
	@mv t-$@ $@


all-local: all-local-@USE_NLS@

all-local-yes: $(GMOFILES)
all-local-no:

# stamp-po is a timestamp denoting the last time at which the CATALOGS have
# been loosely updated. Its purpose is that when a developer or translator
# checks out the package via CVS, and the $(DOMAIN).pot file is not in CVS,
# "make" will update the $(DOMAIN).pot and the $(CATALOGS), but subsequent
# invocations of "make" will do nothing. This timestamp would not be necessary
# if updating the $(CATALOGS) would always touch them; however, the rule for
# $(POFILES) has been designed to not touch files that don't need to be
# changed.
stamp-po: $(srcdir)/$(DOMAIN).pot
	test -z "$(GMOFILES)" || $(MAKE) $(GMOFILES)
	@echo "touch stamp-po"
	@echo timestamp > stamp-poT
	@mv stamp-poT stamp-po

# Note: Target 'all' must not depend on target '$(DOMAIN).pot-update',
# otherwise packages like GCC can not be built if only parts of the source
# have been downloaded.

# This target rebuilds $(DOMAIN).pot; it is an expensive operation.
# Note that $(DOMAIN).pot is not touched if it doesn't need to be changed.
$(DOMAIN).pot-update: $(POTFILES_DEPS)
	@echo "Create $(DOMAIN).pot"
	@$(XGETTEXT) \
	  -o $(DOMAIN).pot -s --from-code iso-8859-1 \
	  --default-domain=$(DOMAIN) --directory=$(top_srcdir) \
	  $(XGETTEXT_OPTIONS) \
	  --copyright-holder='$(COPYRIGHT_HOLDER)' \
	  --msgid-bugs-address='$(MSGID_BUGS_ADDRESS)' \
	  $(POTFILES)
	@test ! -f $(DOMAIN).po || { \
	  if test -f $(srcdir)/$(DOMAIN).pot; then \
	    sed -e '/^"POT-Creation-Date:/D' < $(srcdir)/$(DOMAIN).pot > $(DOMAIN).1po && \
	    sed -e '/^"POT-Creation-Date:/D' < $(DOMAIN).po > $(DOMAIN).2po && \
	    if cmp $(DOMAIN).1po $(DOMAIN).2po >/dev/null 2>&1; then \
	      rm -f $(DOMAIN).1po $(DOMAIN).2po $(DOMAIN).po; \
	    else \
	      rm -f $(DOMAIN).1po $(DOMAIN).2po $(srcdir)/$(DOMAIN).pot && \
	      mv $(DOMAIN).po $(srcdir)/$(DOMAIN).pot; \
	    fi; \
	  else \
	    mv $(DOMAIN).po $(srcdir)/$(DOMAIN).pot; \
	  fi; \
	}

# This rule has no dependencies: we don't need to update $(DOMAIN).pot at
# every "make" invocation, only create it when it is missing.
# Only "make $(DOMAIN).pot-update" or "make dist" will force an update.
$(srcdir)/$(DOMAIN).pot:
	$(MAKE) $(DOMAIN).pot-update

# This target rebuilds a PO file if $(DOMAIN).pot has changed.
# Note that a PO file is not touched if it doesn't need to be changed.
$(POFILES): $(srcdir)/$(DOMAIN).pot
	@lang=`echo $@ | sed -e 's,.*/,,' -e 's/\.po$$//'`; \
	test "$(srcdir)" = . && cdcmd="" || cdcmd="cd $(srcdir) && "; \
	echo "Update $${lang}.po"; \
	cd $(srcdir) && $(MSGMERGE_UPDATE) $${lang}.po $(DOMAIN).pot && \
	sed -e '/^"POT-Creation-Date:/D' <$${lang}.po >t-$${lang}.po && \
	mv -f t-$${lang}.po $${lang}.po


install-data-local: install-data-local-@USE_NLS@
install-data-local-no: all-local
install-data-local-yes: all-local
	$(mkinstalldirs) $(DESTDIR)$(datadir)
	for cat in $(CATALOGS); do \
	  cat=`basename $$cat`; \
	  lang=`echo $$cat | sed -e 's/\.gmo$$//'`; \
	  dir=$(localedir)/$$lang/LC_MESSAGES; \
	  $(mkinstalldirs) $(DESTDIR)$$dir; \
	  if test -r $$cat; then realcat=$$cat; else realcat=$(srcdir)/$$cat; fi; \
	  $(INSTALL_DATA) $$realcat $(DESTDIR)$$dir/$(DOMAIN).mo; \
	  echo "installing $$realcat as $(DESTDIR)$$dir/$(DOMAIN).mo"; \
	  for lc in '' $(EXTRA_LOCALE_CATEGORIES); do \
	    if test -n "$$lc"; then \
	      if (cd $(DESTDIR)$(localedir)/$$lang && LC_ALL=C ls -l -d $$lc 2>/dev/null) | grep ' -> ' >/dev/null; then \
	        link=`cd $(DESTDIR)$(localedir)/$$lang && LC_ALL=C ls -l -d $$lc | sed -e 's/^.* -> //'`; \
	        mv $(DESTDIR)$(localedir)/$$lang/$$lc $(DESTDIR)$(localedir)/$$lang/$$lc.old; \
	        mkdir $(DESTDIR)$(localedir)/$$lang/$$lc; \
	        (cd $(DESTDIR)$(localedir)/$$lang/$$lc.old && \
	         for file in *; do \
	           if test -f $$file; then \
	             ln -s ../$$link/$$file $(DESTDIR)$(localedir)/$$lang/$$lc/$$file; \
	           fi; \
	         done); \
	        rm -f $(DESTDIR)$(localedir)/$$lang/$$lc.old; \
	      else \
	        if test -d $(DESTDIR)$(localedir)/$$lang/$$lc; then \
	          :; \
	        else \
	          rm -f $(DESTDIR)$(localedir)/$$lang/$$lc; \
	          mkdir $(DESTDIR)$(localedir)/$$lang/$$lc; \
	        fi; \
	      fi; \
	      rm -f $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo; \
	      ln -s ../LC_MESSAGES/$(DOMAIN).mo $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo 2>/dev/null || \
	      ln $(DESTDIR)$(localedir)/$$lang/LC_MESSAGES/$(DOMAIN).mo $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo 2>/dev/null || \
	      cp -p $(DESTDIR)$(localedir)/$$lang/LC_MESSAGES/$(DOMAIN).mo $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo; \
	      echo "installing $$realcat link as $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo"; \
	    fi; \
	  done; \
	done

installdirs-local: installdirs-local-@USE_NLS@
installdirs-local-no:
installdirs-local-yes:
	$(mkinstalldirs) $(DESTDIR)$(datadir)
	@catalogs='$(CATALOGS)'; \
	for cat in $$catalogs; do \
	  cat=`basename $$cat`; \
	  lang=`echo $$cat | sed -e 's/\.gmo$$//'`; \
	  dir=$(localedir)/$$lang/LC_MESSAGES; \
	  $(mkinstalldirs) $(DESTDIR)$$dir; \
	  for lc in '' $(EXTRA_LOCALE_CATEGORIES); do \
	    if test -n "$$lc"; then \
	      if (cd $(DESTDIR)$(localedir)/$$lang && LC_ALL=C ls -l -d $$lc 2>/dev/null) | grep ' -> ' >/dev/null; then \
	        link=`cd $(DESTDIR)$(localedir)/$$lang && LC_ALL=C ls -l -d $$lc | sed -e 's/^.* -> //'`; \
	        mv $(DESTDIR)$(localedir)/$$lang/$$lc $(DESTDIR)$(localedir)/$$lang/$$lc.old; \
	        mkdir $(DESTDIR)$(localedir)/$$lang/$$lc; \
	        (cd $(DESTDIR)$(localedir)/$$lang/$$lc.old && \
	         for file in *; do \
	           if test -f $$file; then \
	             ln -s ../$$link/$$file $(DESTDIR)$(localedir)/$$lang/$$lc/$$file; \
	           fi; \
	         done); \
	        rm -f $(DESTDIR)$(localedir)/$$lang/$$lc.old; \
	      else \
	        if test -d $(DESTDIR)$(localedir)/$$lang/$$lc; then \
	          :; \
	        else \
	          rm -f $(DESTDIR)$(localedir)/$$lang/$$lc; \
	          mkdir $(DESTDIR)$(localedir)/$$lang/$$lc; \
	        fi; \
	      fi; \
	    fi; \
	  done; \
	done

uninstall-local: uninstall-local-@USE_NLS@
uninstall-local-no:
uninstall-local-yes:
	catalogs='$(CATALOGS)'; \
	for cat in $$catalogs; do \
	  cat=`basename $$cat`; \
	  lang=`echo $$cat | sed -e 's/\.gmo$$//'`; \
	  for lc in LC_MESSAGES $(EXTRA_LOCALE_CATEGORIES); do \
	    rm -f $(DESTDIR)$(localedir)/$$lang/$$lc/$(DOMAIN).mo; \
	  done; \
	done

html ID:

MOSTLYCLEANFILES =
MOSTLYCLEANFILES += stamp-poT
MOSTLYCLEANFILES += core core.* $(DOMAIN).po $(DOMAIN).1po $(DOMAIN).2po *.new.po
MOSTLYCLEANFILES += *.o *.gmo $(srcdir)/$(DOMAIN).pot *.*~

DISTCLEANFILES = *.mo *.gmo

MAINTAINERCLEANFILES += stamp-po $(GMOFILES)

EXTRA_DIST = LINGUAS $(DOMAIN).pot stamp-po $(POFILES)

# Hidden from automake, but really activated. Works around an automake-1.5 bug.
#distdir: distdir1
distdir1:
	$(MAKE) update-po

update-po: Makefile
	$(MAKE) $(DOMAIN).pot-update
	test -z "$(UPDATEPOFILES)" || $(MAKE) $(UPDATEPOFILES)
	$(MAKE) update-gmo

# General rule for updating PO files.

.nop.po-update:
	@lang=`echo $@ | sed -e 's/\.po-update$$//'`; \
	tmpdir=`pwd`; \
	echo "$$lang:"; \
	test "$(srcdir)" = . && cdcmd="" || cdcmd="cd $(srcdir) && "; \
	echo "$${cdcmd}$(MSGMERGE) $$lang.po $(DOMAIN).pot -o $$lang.new.po"; \
	cd $(srcdir); \
	if $(MSGMERGE) $$lang.po $(DOMAIN).pot -o $$tmpdir/$$lang.new.po; then \
	  if cmp $$lang.po $$tmpdir/$$lang.new.po >/dev/null 2>&1; then \
	    rm -f $$tmpdir/$$lang.new.po; \
	  else \
	    if mv -f $$tmpdir/$$lang.new.po $$lang.po; then \
	      :; \
	    else \
	      echo "msgmerge for $$lang.po failed: cannot move $$tmpdir/$$lang.new.po to $$lang.po" 1>&2; \
	      exit 1; \
	    fi; \
	  fi; \
	else \
	  echo "msgmerge for $$lang.po failed!" 1>&2; \
	  rm -f $$tmpdir/$$lang.new.po; \
	fi

$(DUMMYPOFILES):

update-gmo: Makefile $(GMOFILES)
	@:
